<resources>
    <string name="app_name">bank-app</string>
    <string name="main">Home</string>
    <string name="gbpSymbol" translatable="false">£</string>
    <string name="eurSymbol" translatable="false">€</string>
    <string name="rubSymbol" translatable="false">₽</string>
    <string name="gbp" translatable="false">GBP</string>
    <string name="eur" translatable="false">EUR</string>
    <string name="rub" translatable="false">RUB</string>

    <string name="error_no_internet">No internet access, please check your connection.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="my_cards">My cards</string>
    <string name="balance">Your balance</string>
    <string name="valid_thru">VALID THRU</string>
    <string name="change_currency">Change currency</string>
    <string name="history">History</string>
    <string name="no_internet_error">Look\'s like you don\'t have internet connection, please turn it on.</string>
</resources>