<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surfaceWhite">

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/no_internet_error"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/main"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ltContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/cardPlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <include layout="@layout/placeholder_card_info" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/userCard"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="14dp"
                    app:cardElevation="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tvCardNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginTop="28dp"
                            android:layout_marginEnd="32dp"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:textColor="@color/primaryText"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/frameLayout"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="4455 1223 3488 1000" />

                        <FrameLayout
                            android:id="@+id/frameLayout"
                            android:layout_width="40dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="22dp"
                            android:layout_marginTop="32dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/ivCardType"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/ic_master_card" />
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/frameLayout2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="22dp"
                            android:layout_marginTop="33dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/ic_user" />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/tvUserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="14dp"
                            android:textColor="@color/secondaryText"
                            android:textSize="17sp"
                            app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
                            app:layout_constraintStart_toEndOf="@+id/frameLayout2"
                            app:layout_constraintTop_toTopOf="@+id/frameLayout2"
                            tools:text="Anton Ivanov" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="22dp"
                            android:text="@string/valid_thru"
                            android:textColor="@color/secondaryText"
                            android:textSize="8sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/frameLayout2" />

                        <TextView
                            android:id="@+id/tvValidDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="22dp"
                            android:textColor="@color/secondaryText"
                            android:textSize="17sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView4"
                            tools:text="12/22" />

                        <TextView
                            android:id="@+id/tvConvertedBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="22dp"
                            android:layout_marginTop="35dp"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/primaryText"
                            android:textSize="28sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
                            tools:text="£2 125,12" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="27dp"
                            android:layout_marginEnd="22dp"
                            android:text="@string/balance"
                            android:textColor="@color/secondaryText"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

                        <TextView
                            android:id="@+id/tvBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="22dp"
                            android:layout_marginBottom="28dp"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/primaryText"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView7"
                            tools:text="$2 617.14" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/change_currency"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/userCard" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/currenciesPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/rvCurrency"
                    app:layout_constraintStart_toStartOf="@+id/rvCurrency"
                    app:layout_constraintTop_toTopOf="@+id/rvCurrency">

                    <include layout="@layout/placeholder_currencies" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintDimensionRatio="W,3:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_currency" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/transactionsPlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvCurrency">

                    <include layout="@layout/placeholder_transactions" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvTransactions"
                    android:layout_width="0dp"
                    android:layout_height="280dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvCurrency">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="22dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/history"
                            android:textColor="@color/primaryText"
                            android:textSize="17sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvTransactions"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginTop="8dp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView11"
                            tools:listitem="@layout/item_transaction" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>